--- a/template/views/help.hbs
+++ b/template/views/help.hbs
@@ -8,7 +8,7 @@
     <body>
         <div class="main-content">
             {{>header}}
-
+            <p>Your Query!</p>
             <p>{{helptext}}</p>
         </div>
          {{>footer}}
